# pdf-ripper-core

./: .gitignore  CMakeLists.txt  README.md  TODO.md  writer.plan.md
examples/: read_document.cpp  write_document.cpp
include/Core/: PDF.hpp
include/Core/Compression/: Compression.hpp
include/Core/Document/: CrossReferenceTable.hpp  Header.hpp  Trailer.hpp
include/Core/Document/Catalog/: Catalog.hpp
include/Core/Document/CrossReferenceTable/: CrossReferenceEntry.hpp  CrossReferenceTable.hpp
include/Core/Document/Trailer/: Trailer.hpp
include/Core/Errors/Compression/: CompressionError.hpp
include/Core/Errors/Parser/: ParserError.hpp
include/Core/Parser/: Breakpoint.hpp  Parser.hpp
include/Core/Parser/Catalog/: CatalogParser.hpp  DefaultCatalogParser.hpp
include/Core/Parser/CrossReferenceTable/: AggregateCrossReferenceTableParser.hpp  CrossReferenceTableLocator.hpp  CrossReferenceTableParser.hpp  DefaultCrossReferenceTableParser.hpp
include/Core/Parser/DocumentStructure/: DocumentStructureParser.hpp
include/Core/Parser/Header/: HeaderParser.hpp
include/Core/Parser/Trailer/: AggregateTrailerParser.hpp  DefaultTrailerParser.hpp  TrailerParser.hpp
include/Core/Reader/: FileReader.hpp  Reader.hpp  SubReader.hpp
include/Core/Util/: Text.hpp
include/core/: document.hpp  error.hpp  error_builder.hpp
include/core/compression/: compression.hpp
include/core/document/: header.hpp  identifier.hpp  indirect_object.hpp  indirect_reference.hpp  pdf_object.hpp
include/core/document/catalog/: catalog.hpp
include/core/document/cross_reference_table/: cross_reference_entry.hpp  cross_reference_table.hpp
include/core/document/object/: dictionary.hpp  indirect_object.hpp  indirect_reference.hpp  object.hpp  pdf_value.hpp  stream.hpp  value.hpp
include/core/document/trailer/: trailer.hpp
include/core/errors/: error_builder.hpp  error_code.hpp  error_component.hpp  error_context.hpp
include/core/errors/parser/: parser_error.hpp
include/core/parser/: indirect_object_resolver.hpp  parser.hpp  parser_manager.hpp
include/core/parser/catalog/: catalog_parse_result.hpp  catalog_parser.hpp  default_catalog_parser.hpp  default_catalog_resolver.hpp
include/core/parser/cross_reference_table/: cross_reference_table_parser.hpp  default_cross_reference_table_parser.hpp
include/core/parser/document_structure/: default_document_structure_parser.hpp  document_structure_parser.hpp
include/core/parser/header/: header_parser.hpp
include/core/parser/indirect_object/: content_reader.hpp  resolution_context.hpp  resolver.hpp
include/core/parser/lexer/: pdf_lexer.hpp  pdf_value_parser.hpp
include/core/parser/trailer/: default_trailer_parser.hpp  trailer_parser.hpp
include/core/reader/: reader.hpp
include/core/serializer/: serializer.hpp  serializer_manager.hpp
include/core/serializer/header/: default_header_serializer.hpp  header_serializer.hpp
include/core/util/: text.hpp
include/core/writer/: file_writer.hpp  writer.hpp
include2/core/: pdf.hpp
include2/core/document/: Header.hpp
include2/core/document/cross_reference_table/: cross_reference_table.hpp
include2/core/document/trailer/: trailer.hpp
include2/core/errors/compression/: compression_error.hpp
include2/core/errors/parser/: parser_error.hpp
include2/core/parser/catalog/: default_catalog_parser.hpp
include2/core/parser/header/: header_parser.hpp
include2/core/parser/trailer/: trailer_parser.hpp
include2/core/reader/: file_reader.hpp  sub_reader.hpp
include2/core/util/: text.hpp
src/: main.cpp
src/Core/: PDF.cpp
src/Core/Compression/: Compression.cpp
src/Core/Document/: CrossReferenceEntry.cpp  CrossReferenceTable.cpp  Trailer.cpp
src/Core/Document/Catalog/: Catalog.cpp
src/Core/Document/CrossReferenceTable/: CrossReferenceEntry.cpp  CrossReferenceTable.cpp
src/Core/Document/Trailer/: Trailer.cpp
src/Core/Parser/: Breakpoint.cpp  Parser.cpp
src/Core/Parser/Catalog/: DefaultCatalogParser.cpp
src/Core/Parser/CrossReferenceTable/: AggregateCrossReferenceTableParser.cpp  CrossReferenceTableLocator.cpp  DefaultCrossReferenceTableParser.cpp
src/Core/Parser/DocumentStructure/: DocumentStructureParser.cpp
src/Core/Parser/Header/: HeaderParser.cpp
src/Core/Parser/Trailer/: AggregateTrailerParser.cpp  DefaultTrailerParser.cpp
src/Core/Reader/: FileReader.cpp  SubReader.cpp
src/core/: document.cpp
src/core/compression/: compression.cpp
src/core/document/: header.cpp  indirect_object.cpp
src/core/document/catalog/: catalog.cpp
src/core/document/cross_reference_table/: cross_reference_entry.cpp  cross_reference_table.cpp
src/core/document/object/: dictionary.cpp  indirect_object.cpp  indirect_reference.cpp  object.cpp  pdf_value.cpp  (+2 more)
src/core/parser/: ParserManager.cpp  indirect_object_resolver.cpp  parser.cpp  parser_manager.cpp
src/core/reader/: sub_reader.cpp
src/core/serializer/: serializer.cpp  serializer_manager.cpp
src/core/writer/: file_writer.cpp
src2/core/: pdf.cpp
src2/core/compression/: compression.cpp
src2/core/reader/: file_reader.cpp
(+25 files in other folders)
